--- a/templates/hello.html
+++ b/templates/hello.html
@@ -1,5 +1,14 @@
-<!doctype html>
-<title>Hello User</title>
+<!DOCTYPE html>
+    <html language="en">
+    <head>
+        <meta charset="utf-8">
+        <title>Hello User</title>
+        <link href="/static/css/bootstrap.css" rel="stylesheet" media="screen">
+        <script src="http://code.jquery.com/jquery-latest.js"></script>
+        <script src="/static/js/bootstrap.js"></script>
+        <meta name="viewport" content="width=device-width", initial-scale=1.0">
+    </head>
+
 {% if name %}
     <h1>Hello {{ name }}</h1>
 {% else %}
